@@ -19,6 +19,10 @@ TRUNK
 - Advertise supported SASL Channel-Binding types (XEP-0440)
 - Implement RFC 9266 'tls-exporter' channel binding with TLS 1.3
 
+## Changes
+
+- Support sub-second precision timestamps
+
 ## Removed
 
 - Lua 5.1 support
